--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center" style="font-size:13px;">
             <br><br><br>
-            <h1>HI, I'M ANNIE LIN</h1>
+            <h1>HI, I'M <a href="works/AnnieLinResume.pdf" target="_blank">ANNIE LIN</a></h1>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -252,7 +252,7 @@
                         <br>
                         <h1 class="no-margin"> Harvard College </h1>
                         <h2 class="no-margin">Cambridge, MA | A.B. Computer Science, Citation in Japanese (Expected Graduation: May 2017)</h2>
-                        <ul class="list">
+                        <ul class="list hidden-sm hidden-md">
                             <li>Taiwanese Cultural Society (Co-President)</li>
                             <li>Women in Computer Science (Publicity Chair)</li>
                             <li>First Generation Student Union (Public Relations Chair)</li>
@@ -298,54 +298,54 @@
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-8">
+                    <div class="col-xs-8 text-center">
                         <br>
-                        <a class="btn btn-default btn-sm no-margin" href="works/AnnieLinResume.pdf" target="_blank">
+                        <a class="btn btn-default btn-sm no-margin" href="http://github.com/theannielin" target="_blank">
                             <i class="fa fa-github-alt"></i> 
                             Fork Me on Github
-                        </a>
+                        </a><br><br>
                         <div class="row">
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup" onmouseover="this.src='images/icons/plateicon.png';" onmouseout="this.src='images/icons/brushupicon.png';">
+                                <a href="http://www.wecodeharvard.com/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="http://www.projectimuse.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="works/cs51project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/51.png" alt="cs51">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="works/cs143project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/143.png" alt="cs143">
                                 </a>
                             </div><!-- /.column-->
                         </div><!-- /.row-->
                         <br>
                         <div class="row">
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="http://www.harvardtcs.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/tcs.png" alt="taiwan">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
                                 <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="#modal1" data-toggle="modal" data-backdrop="false">
-                                    <img class="img-responsive" src="img/proj/brushupicon.png" alt="brushup">
+                                <a href="#design" data-toggle="modal" data-backdrop="false">
+                                    <img class="img-responsive proj" src="img/proj/design.png" alt="design">
                                 </a>
                             </div><!-- /.column-->
                         </div><!-- /.row-->
@@ -429,7 +429,7 @@
     </nav> <!-- /.footer -->
 
     <!-- Modal 1 -->
-    <div class="portfolio-modal modal fade" id="modal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="design" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -468,7 +468,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Coffee</h2>
-                            <p>Coffee 2</p>
+                            <p>Coming soon!</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
