--- a/index.html
+++ b/index.html
@@ -366,14 +366,7 @@
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-8 text-center" style="font-size: 13px;">
-                        <br>
-                        <h1> SEE THE WORLD THROUGH MY EYES</h1>
-                        <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
-                            <i class="fa fa-coffee"></i> 
-                            Coffee Appointments
-                        </a>
-                        <br>
+                    <div class="col-xs-8 text-center">
                         <br>
                         <a href="http://www.instagram.com/theannielin" target="_blank"> 
                             <span class="fa-stack fa-lg">
@@ -392,6 +385,12 @@
                               <i class="fa fa-circle fa-stack-2x"></i>
                               <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                             </span>
+                        </a>
+                        <br>
+                        <h1> SEE THE WORLD THROUGH MY EYES</h1>
+                        <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
+                            <i class="fa fa-coffee"></i> 
+                            Coffee Appointments
                         </a>
                         <br>
                         <br>
