--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         <!-- More -->
         <div class="section">
-            <div class="container">
+            <div class="container" tyle="font-size:15px;">
                 <div class="row">
                     <div class="col-xs-2">
                         <!-- empty column-->
@@ -369,22 +369,13 @@
                     <div class="col-xs-8 text-center">
                         <br>
                         <a href="http://www.instagram.com/theannielin" target="_blank"> 
-                            <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                            </span>
+                              <i class="fa fa-instagram"></i>
                         </a>
                         <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
-                            <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
-                            </span>
+                              <i class="fa fa-tumblr"></i>
                         </a>
                         <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
-                            <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
-                            </span>
+                              <i class="fa fa-youtube"></i>
                         </a>
                         <br>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
@@ -392,7 +383,6 @@
                             <i class="fa fa-coffee"></i> 
                             Coffee Appointments
                         </a>
-                        <br>
                         <br>
                         <img src="img/eyes.png" style="width: 400px; margin: 0 auto;"/>
                     </div><!-- /.column-->
